--- a/FRONTEND/src/app/app.component.css
+++ b/FRONTEND/src/app/app.component.css
@@ -1,8 +1,16 @@
 body {
-    padding-bottom: 80px; /* Adjust this value to match your footer height */
-    margin: 0; /* Remove default margin */
+    background-color: rgb(235, 235, 235); /* Light gray background color */
+    background-image: url('../../public/bg.png'); /* Replace with the path to your image */
+    /* Ensures the image covers the entire background */
+    background-position: center; /* Centers the image */
+     /* Prevents the image from repeating */
+    min-height: 100vh; /* Ensures the body covers the full viewport height */
 }
 
 .main-content {
-    padding-bottom: 80px; /* Alternative: use this for a specific content class */
+    padding-bottom: 80px; 
+    padding-top: 20px;/* Alternative: use this for a specific content class */
 }
+
+
+
