--- a/FRONTEND/src/app/app.component.html
+++ b/FRONTEND/src/app/app.component.html
@@ -1,10 +1,12 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-<app-header/>
+<body>
+  <app-header />
 
-  <div class="main-content" > <!-- Adjust height based on your footer -->
+  <div class="main-content"> <!-- Adjust height based on your footer -->
     <router-outlet></router-outlet>
     <ng-toast></ng-toast>
-</div>
+  </div>
+</body>
   
   
