--- a/FRONTEND/src/app/header/header.component.html
+++ b/FRONTEND/src/app/header/header.component.html
@@ -1,35 +1,32 @@
-<ul class="nav fixed-top navbar-expand-sm justify-content-end p-2 mb-5">
+<ul class="nav fixed-top navbar-expand-sm justify-content-between p-2 mb-5">
+  <li class="nav-item">
+    <a class="navbar-brand" routerLink="movies">MOVIE BUFF</a>
+  </li>
+
+  <div class="d-flex align-items-center">
     @if(status===false){
-    <li class="nav-item">
-      <a class="nav-link  " aria-current="page" routerLinkActive="Active" routerLink="movies">MOVIES</a>
+    <li class="nav-item mx-2">
+      <a class="nav-link" aria-current="page" routerLinkActive="Active" routerLink="movies">Movies</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link " routerLinkActive="Active" routerLink="register">REGISTER</a>
+    <li class="nav-item mx-2">
+      <a class="nav-link" routerLinkActive="Active" routerLink="register">Register</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link " routerLinkActive="Active" routerLink="login">LOGIN</a>
-    </li>
+    <li class="nav-item mx-2">
+      <a class="nav-link login-link" routerLinkActive="Active" routerLink="login" (click)="userLogout()">Login</a>
+    </li>    
     }
     @else{
-
       @if(!isUser){
-        <li class="nav-item">
-          <a class="nav-link " routerLinkActive="Active" routerLink="addMovie"
-            >ADD MOVIE</a>
-        </li>
+      <li class="nav-item mx-2">
+        <a class="nav-link" routerLinkActive="Active" routerLink="addMovie">ADD MOVIE</a>
+      </li>
       }
-
-    <li class="nav-item">
-      <a class="nav-link " routerLinkActive="Active" routerLink="movies"
-        >MOVIES</a>
-    </li>
-
-
-
-  
-    <li class="nav-item">
-      <a class="nav-link " routerLinkActive="Active" routerLink="login"
-        (click)="userLogout()">LOGOUT</a>
-    </li>
-  
+      <li class="nav-item mx-2">
+        <a class="nav-link" routerLinkActive="Active" routerLink="movies">MOVIES</a>
+      </li>
+      <li class="nav-item mx-2">
+        <a class="nav-link" routerLinkActive="Active" routerLink="login" (click)="userLogout()">LOGOUT</a>
+      </li>
     }
+  </div>
+</ul>
