--- a/FRONTEND/src/app/book-ticket/book-ticket.component.html
+++ b/FRONTEND/src/app/book-ticket/book-ticket.component.html
@@ -53,7 +53,7 @@
         <label>Ticket Price: </label><span>₹{{movies.price}}/Ticket</span><br>
         <label>Seat Number: </label><span id="text"></span><br>
        
-        <label style="color: white; background-color: rgb(12, 136, 119); font-size: 25px; padding: 5px;">Total Ticket Price: ₹<b><span id="total" style="font-size: 25px;"></span></b></label><br> 
+        <label style="color: white; background-color: rgba(255, 0, 0, 0.993); font-size: 25px; padding: 5px;">Total Ticket Price: ₹<b><span id="total" style="font-size: 25px;"></span></b></label><br> 
         
     
         <button class="btn btn-success">Book Ticket</button>
@@ -163,7 +163,7 @@
                 <div class="seat"></div>
                 <div class="seat"></div>
             </div>
-            <label>You have selected <span id="countS" style="color:antiquewhite; background-color:aquamarine; font-size: 30px;"></span> Seats</label>
+            <label>You have selected <span id="countS" style="color:antiquewhite; background-color:rgb(255, 127, 127); font-size: 30px;"></span> Seats</label>
         </div>
         </div>
 </div>
