--- a/FRONTEND/src/app/add-movie/add-movie.component.css
+++ b/FRONTEND/src/app/add-movie/add-movie.component.css
@@ -4,7 +4,7 @@
     margin-left: 5px;
 }
 h3{
-    background: -webkit-linear-gradient(black,#29d4b7);
+    background: -webkit-linear-gradient(red,black);
     -webkit-background-clip: text;
     background-clip: text;
    -webkit-text-fill-color: transparent;
