--- a/FRONTEND/src/app/login/login.component.css
+++ b/FRONTEND/src/app/login/login.component.css
@@ -3,7 +3,10 @@
     border-radius: 8px; /* Rounded corners */
     height: 700px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+
 }
+
+
 
 .display-1 {
     margin-bottom: 20px; /* Space below the title */
@@ -20,8 +23,8 @@
 
 .form-control {
     border-radius: 4px; /* Rounded corners for inputs */
-    border-color: #29d4b7;
-    border: 1px solid #ced4da; /* Light border color */
+    border-color: black;
+    border: 1px solid rgba(255, 0, 0, 0.322); /* Light border color */
     transition: border-color 0.3s;
     
 }
@@ -29,13 +32,13 @@
 .card{
     margin-top: 100px;
     margin-left: 460px;
-    border: #29d4b7 3px solid;
+    border: black 3px solid;
     border-radius: 5px ;
-    box-shadow:0.0.0.3rem #1cb198;
+    box-shadow:0.0.0.3rem black;
 }
 
 .form-control:focus {
-    border-color: #29d4b7; /* Highlight border on focus */
+    border-color: black; /* Highlight border on focus */
     outline: none; /* Remove default outline */
     box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.151); /* Focus shadow */
 }
@@ -45,7 +48,7 @@
 }
 
 .btn-success {
-    background-color: #08866b; /* Button color */
+    background-color: red; /* Button color */
     border: none; /* Remove default border */
     color: white; /* Text color */
     padding: 10px 20px; /* Button padding */
@@ -54,19 +57,20 @@
 }
 
 button{
-    border-color: black;
+    border-color: red;
 
 }
 .register{
-    color: #29d4b7;
+    color: red;
     text-decoration: underline; 
 }
 
 button:hover{
-    background-color: #29d4b7;
-    border-color: black;
+    background-color:black;
+    border-color: red;
+    color: red;
 }
 
 .register:hover { 
-    color: black; 
+    color: red; 
 }
