--- a/FRONTEND/src/app/add-movie/add-movie.component.html
+++ b/FRONTEND/src/app/add-movie/add-movie.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <h3 class="mt-5" style="color:black"> Hi , Welcome {{user}}</h3>
 
 </div>
@@ -81,4 +81,63 @@
     <button class="btn btn-success">ADD</button>
 
 
-  </form>
+  </form> -->
+
+  <div class="container justify-content-center mx-auto">
+    <h3 class="mt-5" style="color:black"> Hi , Welcome {{user}}</h3>
+  </div>
+  
+  <div class="lead container">
+    <form class="mx-auto" [formGroup]="movie" (ngSubmit)="submit()" #ref="ngForm">
+      <div class="mb-3">
+        <label for="image" class="form-label">Image</label>
+        <input type="file" id="image" class="form-control" formControlName="image">
+        <div *ngIf="image?.invalid && (image?.dirty || image?.touched || ref.submitted)">
+          <p *ngIf="image?.errors?.['required']" class="text-danger">Image is required</p>
+        </div>
+      </div>
+  
+      <div class="mb-3">
+        <label for="movieName" class="form-label">Movie Name</label>
+        <input type="text" id="movieName" class="form-control" formControlName="movieName">
+        <div *ngIf="movieName?.invalid && (movieName?.dirty || movieName?.touched || ref.submitted)">
+          <p *ngIf="movieName?.errors?.['required']" class="text-danger">Movie Name is required</p>
+        </div>
+      </div>
+  
+      <div class="mb-3">
+        <label for="theatreName" class="form-label">Theatre Name</label>
+        <input type="text" id="theatreName" class="form-control" formControlName="theatreName">
+        <div *ngIf="theatreName?.invalid && (theatreName.dirty || theatreName.touched || ref.submitted)">
+          <p *ngIf="theatreName.errors?.['required']" class="text-danger">Theatre Name is required</p>
+        </div>
+      </div>
+  
+      <div class="mb-3">
+        <label for="totalSeats" class="form-label">Total Seats</label>
+        <input type="number" id="totalSeats" class="form-control" formControlName="totalSeats">
+        <div *ngIf="totalSeats?.invalid && (totalSeats?.dirty || totalSeats?.touched || ref.submitted)">
+          <p *ngIf="totalSeats?.errors?.['required']" class="text-danger">Total Seats are required</p>
+        </div>
+      </div>
+  
+      <div class="mb-3">
+        <label for="price" class="form-label">Price</label>
+        <input type="number" id="price" class="form-control" formControlName="price">
+      </div>
+  
+      <div class="mb-3">
+        <label for="status" class="form-label">Status</label>
+        <select id="status" class="form-control" formControlName="status">
+          <option>BOOK ASAP</option>
+          <option>SOLD OUT</option>
+        </select>
+        <div *ngIf="status?.invalid && (status?.dirty || status?.touched || ref.submitted)">
+          <p *ngIf="status?.errors?.['required']" class="text-danger">Status is required</p>
+        </div>
+      </div>
+  
+      <button class="btn btn-success">ADD</button>
+    </form>
+  </div>
+  
