--- a/FRONTEND/src/app/book-ticket/book-ticket.component.html
+++ b/FRONTEND/src/app/book-ticket/book-ticket.component.html
@@ -1,7 +1,4 @@
-
-
-
-<h1>Ticket Booking</h1>
+<!-- <h1>Ticket Booking</h1>
 <div class="container1">
  <div class="container">
   <div class="column1">
@@ -12,8 +9,7 @@
         <p>{{email}}</p>
         <h2 name="title" class="card-title text-white">Movie: {{ movies.movieName }}</h2>
         <img [src]="movies.image" class="card-img-top" style="width: 25rem;" alt="images"/><br>
-        <!-- <label>Overview:</label> <br>
-        <p name="overview">{{ movieOverview }}</p> -->
+        
         <label>Show Timings:</label><br>
         <div class="time">09:00AM</div>
         <div class="time">12:00PM</div>
@@ -166,4 +162,111 @@
             <label>You have selected <span id="countS" style="color:antiquewhite; background-color:aquamarine; font-size: 30px;"></span> Seats</label>
         </div>
         </div>
+</div> -->
+
+<h1>Ticket Booking</h1>
+<div class="container1">
+    <div class="container">
+        <div class="column1">
+            <form [formGroup]="ticketBookingForm" (ngSubmit)="bookingFunction()">
+                <div [ngClass]="className" role="alert" *ngIf="message">
+                    {{ message }} <a routerLink="/login" style="cursor: pointer;">Login here</a>
+                </div>
+                <p>{{ email }}</p>
+                <h2 class="card-title text-white">Movie: {{ movies.movieName }}</h2>
+                <img [src]="movies.image" class="card-img-top" style="width: 100%; max-width: 25rem;" alt="Movie Image" /><br>
+                <label>Show Timings:</label><br>
+                <div class="time">09:00AM</div>
+                <div class="time">12:00PM</div>
+                <div class="time">04:00PM</div>
+                <div class="time">10:30PM</div>
+                <br>
+                <hr>
+                <label>Select a show time: </label>
+                <select formControlName="showTime" class="form-control" id="showTime" [ngClass]="{'is-invalid': submitted && ticketBookingForm.controls['showTime'].errors}">
+                    <option value="">Select a time</option>
+                    <option value="09:00AM">09:00AM</option>
+                    <option value="12:00PM">12:00PM</option>
+                    <option value="04:00PM">04:00PM</option>
+                    <option value="10:30PM">10:30PM</option>
+                </select><br>
+                <div *ngIf="submitted && ticketBookingForm.controls['showTime'].errors" class="text-danger">
+                    <div *ngIf="ticketBookingForm.controls['showTime'].errors['required']">
+                        Select a show timing
+                    </div>
+                </div>
+                <label>Number of Tickets:</label>
+                <select class="form-control" formControlName="noOfTickets" id="tickets" (change)="ticketSelectedChange($event)" [ngClass]="{'is-invalid': submitted && ticketBookingForm.controls['noOfTickets'].errors}">
+                    <option value="">Select number of tickets</option>
+                    <option *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]" [value]="i">{{ i }}</option>
+                </select><br>
+                <div *ngIf="submitted && ticketBookingForm.controls['noOfTickets'].errors" class="text-danger">
+                    <div *ngIf="ticketBookingForm.controls['noOfTickets'].errors['required']">
+                        Choose number of tickets
+                    </div>
+                </div>
+                <label>Ticket Price: </label><span>₹{{ movies.price }} / Ticket</span><br>
+                <label>Seat Number: </label><span id="text"></span><br>
+                <label class="total-price">Total Ticket Price: ₹<b><span id="total"></span></b></label><br>
+                <button class="btn btn-success">Book Ticket</button>
+            </form>
+        </div>
+        <div class="column2">
+            <label>Select Seat Number: </label>
+            <ul class="showcase">
+                <li>
+                    <div class="seat"></div>
+                    <small>Not Selected</small>
+                </li>
+                <li>
+                    <div class="seat Selected"></div>
+                    <small>Selected</small>
+                </li>
+                <li>
+                    <div class="seat Occupied"></div>
+                    <small>Already Occupied</small>
+                </li>
+            </ul>
+            <div class="seatsContainer">
+                <div class="row">
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat Occupied"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                </div>
+                <div class="row">
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat Occupied"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                </div>
+                <div class="row">
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                    <div class="seat"></div>
+                </div>
+                <!-- Add more rows as needed -->
+            </div>
+            <label>You have selected <span id="countS" class="count"></span> Seats</label>
+        </div>
+    </div>
 </div>
