--- a/FRONTEND/src/app/header/header.component.html
+++ b/FRONTEND/src/app/header/header.component.html
@@ -12,7 +12,7 @@
       <a class="nav-link" routerLinkActive="Active" routerLink="register">Register</a>
     </li>
     <li class="nav-item mx-2">
-      <a class="nav-link login-link" routerLinkActive="Active" routerLink="login" (click)="userLogout()">Login</a>
+      <a class="nav-link login-link" routerLinkActive="Active" routerLink="login" >Login</a>
     </li>    
     }
     @else{
