--- a/FRONTEND/src/app/movies/movies.component.html
+++ b/FRONTEND/src/app/movies/movies.component.html
@@ -83,7 +83,9 @@
 <div class="row">
   <div class="col-12 col-sm-6 col-md-4 col-lg-3 pb-3 pt-5" *ngFor="let movie of movies">
     <div class="card" style="width: 18rem; margin: 5%; border-radius: 10px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-      <img [src]="status === true ? movie.image : 'path/to/placeholder.jpg'" class="card-img-top" alt="Movie Image" style="height: 300px; object-fit: cover;" (click)="status === false ? login() : null">
+      <img [src]="movie.image"  *ngIf="status === false" class="card-img-top" alt="Movie Image" style="height: 300px; object-fit: cover; cursor: pointer;" (click)="login()" />
+      <img [src]=" movie.image" *ngIf="status===true" class="card-img-top" alt="Movie Image" style="height: 300px; object-fit: cover;" />
+    
       <h5 class="card-title mt-2 text-center">{{ movie.movieName }}</h5>
       
       <div class="button-container text-center mb-2">
